loco-gen/tests/templates/snapshots/generate_results@Api_controller.snap
---
source: loco-gen/tests/templates/controller.rs
expression: collect_messages(&gen_result)
---
* Controller `Movie` was added successfully.
* Tests for controller `Movie` was added successfully. Run `cargo test`.
