loco-gen/tests/templates/snapshots/generate_results@Api_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: collect_messages(&gen_result)
---
* Migration for `post` added! You can now apply it with `$ cargo loco db migrate && cargo loco db entities`.
* A test for model `Posts` was added. Run with `cargo test`.
* Controller `Post` was added successfully. Its routes require a JWT — re-run with `--no-auth` to generate public routes.
* DTO `PostDto` was added successfully.
* Frontend API hooks `posts.ts` were added successfully.
* Frontend `Edit` page for `Post` was added successfully.
* Frontend `List` page for `Post` was added successfully.
* Frontend `New` page for `Post` was added successfully.
* Frontend `Show` page for `Post` was added successfully.
