loco-gen/tests/templates/snapshots/generate_results@Htmx_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: collect_messages(&gen_result)
---
* Migration for `movie` added! You can now apply it with `$ cargo loco db migrate`.
* A test for model `Movies` was added. Run with `cargo test`.
* Base template was added successfully.
* Controller `Movie` was added successfully.
* movie view was added successfully.
* movie create view was added successfully.
* movie edit view was added successfully.
* movie list view was added successfully.
* movie view was added successfully.
