loco-gen/tests/templates/snapshots/inject[development.yaml]@deployment.snap
---
source: loco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\"config\").join(\"development.yaml\")).expect(\"development.yaml missing\")"
---
  # Binding for the server (which interface to bind to)
  binding: {{ get_env(name="BINDING", default="localhost") }}
